@@ -105,7 +105,12 @@ function admin_menu_init() {
     // Performance: Defer execution.
     drupal_add_js($path .'/admin_menu.js', 'module', 'header', TRUE);
 
-    drupal_add_js(array('admin_menu' => array('margin_top' => variable_get('admin_menu_margin_top', 1))), 'setting');
+    if ($setting = variable_get('admin_menu_margin_top', 1)) {
+      drupal_add_js(array('admin_menu' => array('margin_top' => $setting)), 'setting');
+    }
+    if ($setting = variable_get('admin_menu_position_fixed', 0)) {
+      drupal_add_js(array('admin_menu' => array('position_fixed' => $setting)), 'setting');
+    }
     if ($_GET['q'] == 'admin/build/modules') {
       drupal_add_js(array('admin_menu' => array('tweak_modules' => variable_get('admin_menu_tweak_modules', 0))), 'setting');
     }
