@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-x.x, xxxx-xx-xx
 ------------------------------
+#310423 by sun: Added optional position: fixed configuration setting.
 #292657 by smk-ka: Improved rendering performance.
 #234149 by yhager, sun: Fixed RTL support for IE.
 #266358 by sun: Updated for drupal_add_css().
